--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <div class="wrapper">
         <section class="tela">0</section>
         <div class="buttons">
+            <button class="c">c</button>
             <button>7</button>
             <button>8</button>
             <button>9</button>
@@ -27,7 +28,6 @@
             <button>.</button>
             <button>=</button>
             <button>+</button>
-            <button>c</button>
         </div>
     </div>
 </body>
